force-app/main/default/objects/Points_Milestone__mdt/Points_Milestone__mdt.object-meta.xml
<CustomObject>
    <label>Points Milestone</label>
    <pluralLabel>Points Milestones</pluralLabel>
</CustomObject>