force-app/main/default/objects/Points_Milestone__mdt/fields/Icon_Emoji__c.field-meta.xml
<CustomField>
    <fullName>Icon_Emoji__c</fullName>
    <label>Icon Emoji</label>
    <length>10</length>
    <type>Text</type>
</CustomField>