force-app/main/default/objects/Points_Milestone__mdt/fields/Minimum_Points__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Points__c</fullName>
    <label>Minimum Points</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>