force-app/main/default/objects/Points_Milestone__mdt/fields/Tier_Label__c.field-meta.xml
<CustomField>
    <fullName>Tier_Label__c</fullName>
    <label>Tier Label</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>